# fantasy-ml

./: README.md  pyproject.toml
fantasy/: __init__.py  daos.py  factory.py  nfl.py  player_info.py  predict.py  season_stats.py  team_stats.py  worker.py
fantasy/db/: __init__.py  schema.sql
